# sebi_faq_extractor

./:  .env.example  .gitignore  Dockerfile  EXTRACTION_GUIDE.md  EXTRACTION_SPECIFICATION.md  QUICKSTART.md  README.md  SUMMARY.md  Untitled spreadsheet.xlsx  alembic.ini  clear_db.py  config.py  database.py  docker-compose.yml  embeddings.py  excel_extractor.py  extract_sebi_faqs.py  faq_service.py  index.html  ingest_faqs.py  main.py  models.py  pyproject.toml  requirements.txt  run_db_migration.py  run_extraction_pipeline.py  run_reingestion.py  schemas.py  search_service.py  vector_db.py
assets/: index-B9Cc_Sm1.js  index-Dak2nyeq.js  index-PwcjEe-6.css
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
sebi_faq_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
